--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,4 +5,4 @@ api-version: 1.13
 prefix: HCREVIVE
 authors: [zekro]
 description: Revive people in hardcore mode.
-website: https://zekro.de
+website: https://github.com/zekroTJA/HardcoreRevive
